[package]
name = "rate_limiting_middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"  
actix-service = "2"    
futures = "0.3"          
tokio = { version = "1", features = ["full"] }   
redis = { version = "0.23", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] } 
dotenv = "0.15"          
log = "0.4"              
env_logger = "0.9"       

[dev-dependencies]
actix-rt = "2.5"        
